class-4 externel style sheet use
how to use para, list , number and link

--- a/class-3/index.html
+++ b/class-3/index.html
@@ -14,13 +14,7 @@
 		<h3 style="color:#64AAF6"> This is heading one </h3>
 
 		<img src="picture.jpg" />
-		<img src="picture2.jpg" />"
-
-
-
-
-		
-
+		<img src="picture2.jpg" />
 
 
 	</body>
