--- a/class-9/index.html
+++ b/class-9/index.html
@@ -1,8 +1,9 @@
-<!-- class-7-8 -->
+<!-- class-9 -->
 <html>
 	<head>
 		<title> this is my title</title>	
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Spirax" rel="stylesheet">
+		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<link type="text/css" rel="stylesheet " href="style.css"/>
 	
 	</head>
@@ -12,6 +13,11 @@
 			<p>Lorem ipsum <strong>dolor</strong>  sit amet, consectetur adipisicing elit. Soluta nobis rerum iure nostrum dolor. Quo totam possimus, ex, sapiente rerum vel maxime fugiat, ipsam blanditiis veniam, suscipit labore excepturi veritatis.</p>
 
 		<img src="http://placehold.it/1000x200"/>
+		<div class="big-icone">
+			
+		<i class="fa fa-home"></i>	
+		</div>
+		
 
 		<div class="menu" >
 			
